Fix layout spacing, remove images, change text-color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,9 +37,8 @@ time, mark, audio, video {
 }
 
 body {
-  background: linear-gradient(-168deg, rgba(0, 90, 242, .5), rgba(169, 7, 245, .5)), url("tetons.jpg") no-repeat fixed center;
-  // background-image: url("tetons.jpg");
-  color: $textColor;
+  // background: linear-gradient(-168deg, rgba(0, 90, 242, .5), rgba(169, 7, 245, .5)), url("tetons.jpg") no-repeat fixed center;
+  background: linear-gradient(-168deg, rgba(0, 90, 242, .5), rgba(169, 7, 245, .5)), no-repeat fixed center;
   font-family: Helvetica, sans-serif;
   position: relative;
   width: 100%;
