--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,7 +1,6 @@
 .wrapper {
   min-height: 100%;
-  min-height: 60vh;
-
+  min-height: 20vh;
   display: flex;
   align-items: center;
 }
@@ -9,7 +8,6 @@
 .header-wrap {
   min-height: 100%;
   min-height: 20vh;
-
   display: flex;
   align-items: center;
 }
