--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -1,15 +1,15 @@
 $backgroundColor: rgb(20, 0, 182);
-$textColor: rgb(255, 170, 226);
-$textColorLight: rgba(255, 170, 226, .75);
+$textColor: rgb(255, 255, 255);
+$textColorLight: rgba(92, 255, 177, .5);
 
-.text_color-light:link, .text_color-light:visited {
+.text_color-light, .text_color-light:link, .text_color-light:visited {
   text-decoration: none;
   color: $textColor;
 }
 
 .text_color-light:hover, .text_color-light:active {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: $textColor;
   text-shadow: -4px 4px $textColorLight;
 }
 
